# SupercellFlash

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Workspace.lua  premake5.lua  setup.cmd  setup.command  setup.sh
SupercellBytestream/: premake5.lua
SupercellBytestream/include/: SupercellBytestream.h
SupercellBytestream/include/SupercellBytestream/: BufferStream.h  FileStream.h
SupercellBytestream/include/SupercellBytestream/base/: Bytestream.h  BytestreamBase.h  Endian.h
SupercellBytestream/include/SupercellBytestream/error/: FileExistException.h  StreamException.h
SupercellCompression/: premake5.lua
SupercellCompression/include/: SupercellCompression.h
SupercellCompression/include/SupercellCompression/: Compressor.h  Decompressor.h  Signature.h
SupercellCompression/include/SupercellCompression/error/: CompressException.h  DecompressException.h
SupercellCompression/src/backend/: LzhamCompression.cpp  LzhamCompression.h  LzmaCompression.cpp  LzmaCompression.h  ZstdCompression.cpp  ZstdCompression.h
SupercellCompression/src/caching/: cache.cpp  cache.h  md5.cpp  md5.h
SupercellCompression/src/compression/: Compressor.cpp  Decompressor.cpp
SupercellCompression/src/error/: CompressException.h  DecompressException.h
SupercellFlash/: premake5.lua
SupercellFlash/include/: SupercellFlash.h
SupercellFlash/include/SupercellFlash/: SupercellSWF.h  Tags.h
SupercellFlash/include/SupercellFlash/error/: NegativeTagLengthException.h  ObjectLoadingException.h
SupercellFlash/include/SupercellFlash/flash/: SupercellSWF.h  Tags.h
SupercellFlash/src/: SupercellSWF.cpp
SupercellFlash/src/error/: NegativeTagLengthException.h  UnableToFindObjectException.h
SupercellFlash/src/flash/: SupercellSWF.cpp
SupercellFlash/src/objects/: MovieClip.cpp  MovieClipFrame.cpp  MovieClipModifier.cpp  Shape.cpp  ShapeDrawBitmapCommand.cpp  TextField.cpp
SupercellFlash/src/texture/: SWFTexture.cpp
SupercellFlash/src/transformation/: ColorTransform.cpp  Matrix2x3.cpp  MatrixBank.cpp
Test/: Main.cpp  premake5.lua
Tests/SupercellCompression/: main.cpp  premake5.lua
Tests/SupercellFlash/: main.cpp  premake5.lua
cmake/: SupercellFlash.cmake  SupercellFlashTest.cmake  SupercellFlashTextureTool.cmake  dependencies.cmake
include/: SupercellFlash.h
include/SupercellFlash/: SupercellSWF.h  Tags.h
include/SupercellFlash/error/: NegativeTagLengthException.h  NullPointerException.h  ObjectLoadingException.h
include/SupercellFlash/exception/: NegativeTagLengthException.h  ObjectLoadingException.h  ObjectNotFoundException.h
include/SupercellFlash/io/: SWFStream.h
include/SupercellFlash/objects/: ColorTransform.h  DisplayObject.h  ExportName.h  Matrix2D.h  MatrixBank.h  MovieClip.h  MovieClipFrame.h  MovieClipModifier.h  SWFTexture.h  Shape.h  ShapeDrawBitmapCommand.h  TextField.h
include/SupercellFlash/texture/: SWFTexture.h
include/SupercellFlash/transformation/: ColorTransform.h  Matrix2D.h  MatrixBank.h
include/SupercellFlash/types/: SWFContainer.hpp  SWFStream.hpp  SWFString.hpp
premake/: generate_visual_studio_solution.bat
scripts/: build_aarch64.bat  build_android_aarch64.bat  build_android_armv7a.bat  build_armv7a.bat  build_macos.bat  generate_android.bat  generate_solution.bat  generate_windows.bat  update_submodule.bat
scripts/unix/: generate_gnu_makefiles.sh  generate_xcode_project.sh
scripts/windows/: generate_visual_studio_solution.cmd
source/: SupercellSWF.cpp
source/objects/: ColorTransform.cpp  Matrix2D.cpp  MatrixBank.cpp  MovieClip.cpp  MovieClipFrame.cpp  MovieClipModifier.cpp  SWFTexture.cpp  Shape.cpp  ShapeDrawBitmapCommand.cpp  TextField.cpp
src/: SupercellSWF.cpp
src/objects/: MovieClip.cpp  MovieClipFrame.cpp  MovieClipModifier.cpp  SWFTexture.cpp  Shape.cpp  ShapeDrawBitmapCommand.cpp  TextField.cpp
src/texture/: SWFTexture.cpp
src/transformation/: Matrix2D.cpp  MatrixBank.cpp
supercell-flash/: CMakeLists.txt
supercell-flash/sc2_schemas/: CompressedMovieClips.fbs  DataStorage.fbs  ExportNames.fbs  ExternalMatrixBank.fbs  FileDescriptor.fbs  Header.fbs  MovieClipModifiers.fbs  MovieClips.fbs  MovieClipsV6.fbs  Shapes.fbs  TextFields.fbs  Textures.fbs  Types.fbs
supercell-flash/source/flash/: flash.h  flash_tags.h
supercell-flash/source/flash/display_object/: DisplayObject.h  MovieClip.cpp  MovieClip.h  MovieClipFrame.cpp  MovieClipFrame.h  MovieClipModifier.cpp  MovieClipModifier.h  Shape.cpp  Shape.h  ShapeDrawBitmapCommand.cpp  ShapeDrawBitmapCommand.h  TextField.cpp  TextField.h
supercell-flash/source/flash/objects/: ExportName.cpp  ExportName.h  SWFTexture.cpp  SWFTexture.h  SupercellSWF.cpp  SupercellSWF.h  SupercellSWF2.cpp  SupercellSWF2.h
supercell-flash/source/flash/transform/: ColorTransform.cpp  ColorTransform.h  Matrix2D.cpp  Matrix2D.h  MatrixBank.cpp  MatrixBank.h
supercell-flash/source/flash/types/: SWFContainer.hpp  SWFStream.hpp  SWFString.hpp
texture_tool/: SWFFile.hpp  main.cpp
tools/test-tool/: CMakeLists.txt  main.cpp
tools/test-tool/source/: main.cpp
tools/texture-tool/: CMakeLists.txt
tools/texture-tool/source/: SWFFile.hpp  SpriteData.hpp  main.cpp
(+73 files in other folders)
